--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-bootstrap": "^2.10.8",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "sweetalert2": "^11.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
